--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -174,7 +174,7 @@ Entsprechend dieses Ablaufs wird beim Start der Applikation eine Liste mit allen
 aus welchen einer als Einstiegspunkt in die Suche ausgewählt werden kann.
 Dieser Datensatz wird in den Betrachter der Haupansicht \ref{fig:omip_aplication_layout} geladen.
 Die Haupansicht setzt sich aus verschiedenen Interaktions-Elementen (Views) zusammen,
-welchen in mehreren möglichen Layouts mit unterschiedlicher Multiplizität und Anordnung miteinander kombiniert werden.
+welche in mehreren möglichen Layouts mit unterschiedlicher Multiplizität und Anordnung miteinander kombiniert werden.
 Von diesen Elementen gibt es Vier verschiedene Typen:
 \begin{itemize}
 	\item Betrachtungsansicht für Volumes (2D-Betrachter)
@@ -187,7 +187,7 @@ unter der Prämisse dass die Bedienelemente der einzelnen Views genügend Platz 
 Auf den Funktionsumfang des 2D-Betrachters und der Ergebnis-Liste wird in den folgenden Unterkapiteln etwas genauer eingegangen.
 \begin{figure}[t]
 	\centering
-		\includegraphics[width=0.8\linewidth]{img/c3_application_standard.jpg}
+		\includegraphics[width=\linewidth]{img/c3_application_standard.jpg}
 	\caption{Hauptansicht mit Layout für zwei 2D-Betrachter, Report-Betrachter und Ergebnis-Liste}
 	\label{fig:omip_aplication_layout}
 \end{figure}
@@ -218,7 +218,7 @@ In allen anderen Funktionen ist das Scrollen immer an die Navigation durch die S
 \label{sec:Funktionalität der Ergebniss-Liste}
 Die Ergebnis-Liste präsentiert die Ergebnisse einer Suche welches sie über Drag and Drop in einen Betrachter laden lassen.
 Die Präsentation erfolgt über ein Vorschaubild welches von KRESHMOI als repräsentatives Bild für die Suche gewählt wurde.
-Um ein Suchergebniss im Vorfeld zu Beurteilen verfügt die Ergebnis-List ebenfalls über die Funktion die Orientierung der Schnitte des Volumes zu ändern und die Vorschaubilder zu zoomen.
+Um eine Beurteilung der Suchergebnisse im Vorfeld zu ermöglichen, verfügt die Ergebnis-List ebenfalls über die Funktion die Orientierung der Schnitte des Volumes zu ändern und die Vorschaubilder zu zoomen.
 
 %----------------------------------------------
 % * Technische Umsetzung
@@ -226,13 +226,41 @@ Um ein Suchergebniss im Vorfeld zu Beurteilen verfügt die Ergebnis-List ebenfal
 \subsection{Technische Umsetzung}
 \label{sec:Technische Umsetzung}
 In dem Unterkapitel Technische Umsetzung wird im Groben die Archtiktur der Applikation sowie von komplexeren Komponenten erklärt und auf wichtige Details bei deren Umsetzung eingegangen.
-Weiters wird angegeben wie die Fensterung mit zwei verschidenen Technologie implementiert wurde.
+Weiters wird angegeben wie die Fensterung mit zwei verschiedenen Technologien implementiert wurde.
 
 %----------------------------------------------
 % ** Umsetzung der dynamischen Layouts
 %----------------------------------------------
 \subsubsection{Framework für dynamischen Layouts}
 \label{sec:Umsetzung der dynamischen Layouts}
+Das eines der zentralen Konzepete bei der Darstellung von Bedien- und Anzeige-Elementen in Cappuccino ist die View Klasse (Siehe Figure \ref{fig:cappuccino_view_concept} ), 
+von welcher all diese Elemente erben.
+In eine View können wiederum weitere Sub-Views eingehängt und innerhalb dieser Positioniert werden.
+Die Darstellung der Elemente erfolgt in einem Fenster, welche als erste View in der Hirachie ihre sogenannte ContentView zur Verfügung stellt.
+\begin{figure}[t]
+	\centering
+	\includegraphics[width=0.6\linewidth]{img/c3_cappuccino_view_concept.jpg}
+	\caption{Konzept zum Aufbau von GUIs durch die Veschachtelung von View-Objekten in Cappuccino}
+	\label{fig:cappuccino_view_concept}
+\end{figure}
+\begin{figure}[t]
+	\centering
+	\includegraphics[width=\linewidth]{img/s3_layoutController_framework.jpg}
+	\caption{Framework zum für den Layout-Austausch}
+	\label{fig:layout_framework}
+\end{figure}
+
+Auch die funktionalen Blöcke in welche diese Software eingeteilt wurde, 
+im weiteren as Superelemente bezeichnet, 
+erben von dieser View-Klasse, 
+wodurch Sie in einer übergeordneten View einfach in verschiedenen Layouts angeordnet werden können.
+Die Anordung der Superelemente sowie die Kommunikation zwischen ihnen erfolgt in einem LayoutController.
+Der LayoutController kapselt das von Ihm erstellte Layout in einer LayoutView welche dann in die ContentView des Fensters eingehängt wird.
+Durch dieses Konzept (Siehe Figure \ref{fig:layout_framework} ) lassen sich die Anzahl und Anordung der Superelemente einfach zur Laufzeit ändern,
+da bei einer Änderung nur ein neuer LayoutController instanziert und seine LayoutView gegen die akutelle in der ContentView getauscht werden muss.
+Zur Erhaltung der Nutzdaten muss jeder LayoutController Funktionen zum Setzen und Abfragen dieser zur Verfügung stellen.
+Die Behandlung von Layout-Änderungen finden im LayoutControllerManager statt, 
+welcher sich um den Austausch der LayoutView kümmert und die Nutzdaten vom alten in den neuen LayoutController überträgt.
 
 %----------------------------------------------
 % ** Berehnung der Fensterung
@@ -251,14 +279,16 @@ Für diese Berechnung wurde ein Ansatz auf Basis von JavaScript durch die Canvas
 Für die graphische Ausgabe im Browser wird ein HTML5 Canvas Element verwendet,
 auf welches über ein sogenanten Grafikkontext zugegriffen werden kann. 
 Dieser Grafikkontext wird in JavaScript vom Browser als Objekt zur Verfügung gestellt.
-Durch das Kontext-Objekt kann der Bildinhalt in ein Array von Farbwerten und umgekehrt auch ein Array von Farbwerten in das Bild geschrieben werden.
+Durch das Kontext-Objekt kann der Bildinhalt in ein Array von Farbwerten ausgegeben und umgekehrt auch ein Array von Farbwerten in das Bild geschrieben werden.
 Dabei wird das Bild zeilenweise in ein eindimensionales Array Serialisiert, 
 wo jeder Bildpunkt auf 4 Speicherstellen mit einem Integer-Wert zwischen 0 und 255 abgebildet wird.
 Die ersten drei Speicherstellen bilden den Farbwert durch die Anteile von Rot, Grün, Blau und die vierte den Alpha Kanal.
 Für die Fensterung müssen alle Speicherstellen für die Farbe transformiert und wieder auf einen Integer Wert gerundet werden.
 %
-Um unnötige Berechnungen für jedes einzelne Pixel zu sparen, werden pro Fensterungsschritt alle Pixelwerte zwischen 0 und 255 einmal vor berechnet und in einer LookUp Tabelle als Array gespeichert.
-Anstatt den Wert für jedes Pixel neu zu berechen und zu runden fungiert bei diesem Ansatz der aktuelle Wert eines Pixels als Schlüssel für die Tabelle welche den neuen Wert des Pixels enthält.
+Um unnötige Berechnungen für jedes einzelne Pixel zu sparen, 
+werden pro Fensterungsschritt alle Pixelwerte zwischen 0 und 255 einmal vor berechnet und in einer LookUp Tabelle als Array gespeichert.
+Anstatt den Wert für jedes Pixel neu zu berechen und zu runden fungiert bei diesem Ansatz der aktuelle Wert eines Pixels als Schlüssel für die Tabelle, 
+welche den neuen Wert des Pixels enthält.
 Die Anzahl der Operationen wird dabei auf 255 Berechnungen und die Anzahl der Speicherzugriffe pro Bildpunkt sowie die der LookUp Tabelle reduziert.
 \begin{figure}[t]
 \begin{lstlisting}[
@@ -351,7 +381,7 @@ void main() {
 \subsubsection{2D Betrachter}
 \label{sec:2D Betrachter}
 Für die Implementierung des 2D-Betrachters wurde neben Cappuccino für die Bedienelemente auch noch Pixi.JS für das Grafikfenster zur Darstellung des Volumes verwendet.
-Der Inhalt des Grafikfensters ergibt sich aus den inhalt von mehreren übereinanderliegenden Layern.
+Der Inhalt des Grafikfensters ergibt sich aus den Inhalten von mehreren übereinanderliegenden Layern.
 \begin{itemize}
 	\item \textbf{ImageLayer} zur Darstellung der Schnitte des Volumes
 	\item \textbf{AnotationLayer} zum zeichnen der ROIs
@@ -362,7 +392,7 @@ Bei diesen Layern werden Skalierung und Positionierung nur auf den ImageLayer un
 Um die Software möglichst erweiterbar zu gestalten,
 wurde eine LayerKlasse $PixiLayer$ entwickelt welcher eine beliebige Menge von Sublayern hizugefügt werden kann.
 Dabei wird zwischen statischen Sublayern welche jeweils nur die Anzeigefläche ausfüllen und dynamischen Sublayern welche gemeinsam skaliert und positioniert werden können unterschieden.
-Diese Layerklasse erledigt auch die konvertierung von Punkten zwischen den dynamischen und den statischen Sublayern, in Hisicht auf Postion, Skalierung und Layerdimension.
+Diese Layerklasse erledigt auch die Konvertierung von Punkten zwischen den dynamischen und den statischen Sublayern, in Hisicht auf Postion, Skalierung und Layerdimension.
 Da die restliche GUI mit Cappuccino aufgebaut wurde und dieses Framework auch die Ereignisse für Größenänderungen der einzelen Views behandelt,
 müssen diese vom ViewObjekt welches den 2D-Betrachter Kapselt an das Grafikfenster weiter gegeben werden.
 Ansonsten ist das Pixi.JS basierte Grafikfenster durch die LayerKlassen bis auf Funktionen zur Übergabe der Anzeigedaten und zur Punktkonvertierung vom 2D-Betrachter abgeschottet.
@@ -374,6 +404,10 @@ Die Betrachter-Klasse selbst ist hauptsächlich für die Erstelltung der Bediene
 	\caption{Struktur des 2D-Betrachters als Klassendiagramm}
 	\label{fig:omip_aplication_layout}
 \end{figure}
+
+Die Umsetzung der Fensterung im 2D-Betrachter erfolgte wegen der wesentlich besseren Performance in WebGL, 
+was der Grund für die Auswahl von Pixi.JS als Grafik-Framework ist.
+Die Fensterung wurde in einem Filter für Pixi.JS implementiert (Siehe Kapitel \ref{sec:PixiJS} ), welcher den GLSL-Shadercode auf das Schnittbild des Volumes anwendet.
 
 %----------------------------------------------
 % * Kommunikation mit KRESHMOI
@@ -466,9 +500,16 @@ Für die Schnittebene gibt es entsprechende der Terminologie für die Bildgebung
 Sollen die Regionen welche der Suchanfrage entsprechen in den einzelnen Bildern markiert werden, muss die Query-ID mit übergeben werden um die ursprüngliche Suchanfrage zu identifizieren.
 \\
 \\
-Beispiel:
-\\
-\url{/image/9587336b132b127b936ad0afd80ca86.jpg?slice=1&direction=axial&query=1}
+\begin{figure}[t]
+\begin{lstlisting}[
+	frame=single,
+	basicstyle=\small,
+	caption={Beispiel-Anfrage für eine Schnittbild}
+]
+image/958736b132b7b936ad0afd80ca86.jpg?slice=1&direction=axial&query=1
+\end{lstlisting}
+\end{figure}
+
 %TODO: Prüfen ob URL ok
 %TODO: Zitieren von KRESHMOI API
 %TODO: Zitieren der Schnittebenen
