--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -166,3 +166,11 @@
   timestamp = {2014.09.17}
 }
 
+@OTHER{kreshmoi-architecture-spec,
+  author = {Emmanuel Jamin, Vassil Montchev, Konstantin Pentchev},
+  title = {KRESHMOI - State of the art, concepts and specification for the \enquote{Early software architecture}},
+  year = {2011},
+  howpublished = {\url{http://www.khresmoi.eu/assets/Deliverables/WP6/KhresmoiD631.pdf}},
+  timestamp = {2014.12.04}
+}
+
