Kapitel4: Unterkapitel Messung geschrieben

--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -275,7 +275,7 @@ welcher sich um den Austausch der LayoutView kümmert und die Nutzdaten vom alte
 % ** Berehnung der Fensterung
 %----------------------------------------------
 \subsubsection{Berechnung der Fensterung}
-\label{sec:Berehnung der Fensterung}
+\label{sec:Berehnung_der_Fensterung}
 Die Berechnung der Fensterung ist eine Anpassung von Kontrast und Helligkeit des Bildes,
 wozu für jedes Pixel der Farbwert mit einer Linear Transformation in einen neuen Zielwert überführt werden muss.
 \begin{equation}
