--- a/s4_results.tex
+++ b/s4_results.tex
@@ -16,7 +16,7 @@ In Absatz \ref{sec:Berehnung_der_Fensterung} wurden zwei Ansätze zur Berechnung
 welche jeweils auf unterschiedlichen vom Browser zur verfügung gestellten API's basieren.
 %TODO: Introducation
 
-\subsubsection{Messung}
+\subsubsection{Messverfahren}
 Um zu evaluieren wie performant ein Verfahren ist,
 wurde über einen bestimmten Zeitraum $T_m$ ermittelt, wie viele Bilder durchschnittlich in der Sekunde berechnet werden können.
 Dieser Wert wird als Framerate bezeichnet und in FPS (Frames per Second) angegeben.
@@ -43,15 +43,127 @@ Zur Messung wurde das Tool Stats.JS verwendet und geringfügig modifiziert um di
 Nach ablauf der Messzeit $T_m$ werden die gemessenen Werte zurück an den Server gesendet welcher diese in eine Datenbank schreibt.
 Der Server antwortet darauf mit einem neuen Messpunkt wobei das Testbild zwischen den Messpunkten jedes mal vergrößert wird bis eine vorher festgelegte maximale Größe ereicht ist.
 
+\subsubsection{Ergebnisse}
+Das im letzen Unterkapitel wurde ein Verfahren zur Ermittlung der Framerate in Abhängigkeit von der Bildgröße vorgestellt, 
+sowie mehrere Parameter welche auf diese Größe einen Einfluss haben.
+Von diesen Paramertern wurden die Harware \ref{tab:tested_hardware}, 
+der Browser \ref{tab:tested_browser} und das Verfahren zum Rendern \ref{tab:tested_technologies} in unterschidlichen Kombinationen getestet und einen Kennline ermittlet.
+\begin{figure}[t]
+	\centering
+	\begin{tabular}{| l | l | l |}
+		\hline
+				& PC				& Tablet \\
+		\hline
+		Prozessor	& Intel Core i7-2600K 3.40GHz	& Nvidia Tegra 3 1.30GHz \\
+		Arbeitsspeicher	& 12GB DDR3-1333		& 1GB DDR3-1333 \\
+		Grafikkarte	& Nvidia GeForce 8800 GTS	& Nvidia GeForce ULP \\
+		GPU Kerne	& 96				& 12 \\
+		Grafikspeicher	& 640MB 800 MHz			& Shared mit CPU \\
+		Betriebssystem	& Windows 8			& Android 4.4.4 \\
+		\hline
+	\end{tabular}
+	\caption{Harware-Konfiguration der geteseten Geräte}
+	\label{tab:tested_hardware}
+\end{figure}
+\begin{figure}[t]
+	\centering
+	\begin{tabular}{| l | l |}
+		\hline
+		Browser			& Version \\
+		\hline
+		Chrome			& 39.0 \\
+		Chrome for Android 	& 39.0 \\
+		FireFox			& 34.0.5 \\
+		InternetExplorer	& 11.0 \\
+		Opera			& 26.0 \\
+		Safari			& 5.1.7 \\
+		\hline
+	\end{tabular}
+	\caption{Getestete Browser}
+	\label{tab:tested_browser}
+\end{figure}
+\begin{figure}[t]
+	\centering
+	\begin{tabular}{| l | l |}
+		\hline
+		Verfahren	& Verwendete Technologien \\
+		\hline
+		WebGL		& Canvas3D API, Pixi.JS, JavaScript \\
+		Canvas 2D	& Canvas2D API, JavaScript \\
+		\hline
+	\end{tabular}
+	\caption{Getestete Verfahren mit verwendeten Technologien}
+	\label{tab:tested_technologies}
+\end{figure}
 
-%TODO: Framework
-%TODO: Tests
-%TODO: Results
-%TODO: Interpretation
+
+Die Abbildungen \ref{fig:stat_renderer_pc_chorme} und \ref{fig:stat_renderer_tablet_chorme} zeigen einen Vergleich der beiden rendering Verfahren auf jeweils unterschiedlicher Hardware mit Chrome.
+In beiden Fällen verhält sich WebGl wesentlich performanter als das rendering der Bilder in der CPU.
+Am PC mit einer Grafikkarte aus dem Jahr 2007 wurden Bilder bis zu 3000Pixel Kantelänge getestet, 
+welche sich ohne Eeinbrüche mit 60FPS render liesen.
+Dieses Verhalten lässt sich dadurch erklären dass eine GPU für diese Anwendung wesentlich geeigneter ist.
+Zu den beschleunigenden Faktoren zählen unter anderem, das Zusammenarbeiten vieler paraleller Shader-Kerne welche selbst wiederum sehr stark für diese Art von Berechnungen optimiert sind.
+Weitere Fakturen sind die schnelle Anbindung des Grafikspeichers in dem das Bild als Textur abgelegt wird, und dass die GPU auf weniger paralelle Prozesse aufgeteilt wird als die CPU.
+Am PC wurden dieses Tests auch mit anderen Browsern durchgeführt welche hier nicht abgebildet sind, da die Ergebnisse sehr ähnlich waren.
+
+Unterschiede zwischen den verschiedenen Browsern zeigten sich nur beim rendern mit Canvas 2D was in Abbildung \ref{fig:stat_browser_js_pc} dargestellt wird.
+Bei dieser Gegenüberstellung wird die Performance ausschließlich durch die Imlementierung des Browsers bestimmt,
+wobei hier die Effizienz der JavaScript-Engine am meisten Einfluss hat.
+Bei diesen Test ist noch anzumerken dass nicht davon ausgegangen werden kann, 
+dass die JavaScript Interpreter für diese Art von Operationen, 
+also dem vearbeiten von großen linearen Daten-Arrays optimiert wurden, 
+da diese Art der Datenverabeitung in klassischen Html5 Anwendungen eher selten vorkommt.
+Das unterschiedliche Verhalten der Browser mit WebGl wurde hier nicht dargestellt da die Performance bis zu einer Größe von 3000Pixel Kantenlänge bei allen Browsern konstant 60FPS beträgt.
+Die einzige Ausnahme bildet der Browser Safare in welchen WebGl nur exerimentell verfügbar ist und extra aktiviert werden muss, was in der geteseten Version nicht möglich war.
+Es ist auch anzunehmen dass beim Rendern mit WebGl der Browser selbst keine nennenswerte Rolle spielt da die Datenverarbeitung in der GPU passiert und der Browser nur das Ergebniss darstellt.
+
+In den Abbildungen \ref{fig:stat_hardware_js_chrome} und \ref{fig:stat_hardware_webgl_chrome} wird die Performance auf unterschiedlicher Hardware gezeigt.
+Obwohl sich beim Browser Chrome die Tablet Version in einigen Features von der Desktop Version unterscheidet, 
+ist anzunehmen dass Dies auf die Performance keine Auswirkung hat da sie beide die selbe JavaScript Engine verwenden.
+Die Unterschiede in der Leistung beim Rendern mit Canvas 2D erklärt sich durch die wesentlich geringere Leistung der CPU im Tablet gegenüber dem PC.
+Beim Rendern mit WegGl führt die schwächere GPU des Tablets zu der schlechteren Performance.
+
+\begin{figure}[pt]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/c4_stat_renderer_pc_chorme.jpg}
+	\caption{Performance unterschiedliche rendering Verfahren am PC mit Chrome}
+	\label{fig:stat_renderer_pc_chorme}
+\end{figure}
+
+\begin{figure}[pt]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/c4_stat_renderer_tablet_chorme.jpg}
+	\caption{Performacne unterschiedliche rendering Verfahren am Tablet mit Chrome}
+	\label{fig:stat_renderer_tablet_chorme}
+\end{figure}
+
+\begin{figure}[pt]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/c4_stat_browser_js_pc.jpg}
+	\caption{Performance unterschiedlicher Browser beim rendering mit Canvas 2D}
+	\label{fig:stat_browser_js_pc}
+\end{figure}
+
+\begin{figure}[pt]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/c4_stat_hardware_js_chrome.jpg}
+	\caption{Performance unterschiedlicher Hardware mit Canvas 2D in Chrome}
+	\label{fig:stat_hardware_js_chrome}
+\end{figure}
+
+\begin{figure}[pt]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/c4_stat_hardware_webgl_chrome.jpg}
+	\caption{Performance unterschiedlicher Hardware mit WebGL in Chrome}
+	\label{fig:stat_hardware_webgl_chrome}
+\end{figure}
+
+\subsubsection{Praktische relevanz der Ergebnisse}
 
 %----------------------------------------------
 % * Usability
 %----------------------------------------------
 \subsection{Usability}
 \label{sec:Usability}
+Usablility
 %markus fragen
