--- a/s5_conclusion.tex
+++ b/s5_conclusion.tex
@@ -5,3 +5,7 @@
 %-------------------------------------------------------
 \section{Conclusion}
 \label{sec:conclusion}
+In dieser Arbeit wurde die Umsetzung eines Browser basierten Frontend's für einer Suchmaschiene für radiologische Bilddaten gezeigt.
+Es wurde anhand von zwei gängigen Software-Produkten zur Betrachtung von radiologischen Bilddaten die wichtigsten Anforderungen analysiert und mit der Erweiterung um die Suchfunktion als Webapplikation umgesetzt.
+Es wurde gezeigt dass es mit den aktuell verfügbaren Technologien und Frameworks ohne Probleme möglich ist eine Betrachter für radiologische Bilddaten für den Browser zu implementieren.
+
